--- a/src/app/all-classes/all-classes.component.html
+++ b/src/app/all-classes/all-classes.component.html
@@ -1,34 +1,16 @@
-<span class="form-header">Типы сетей</span>
+<span class="form-header" i18n="@@network-types">Network types</span>
 <div>
     <table>
         <tr>
-            <td>
-                Тип    
-            </td>
-            <td>
-                Сетей в типе
-            </td>
-            <td>
-                Адресов в сети
-            </td>
-            <td>
-                Min сеть
-            </td>
-            <td>
-                Min адрес
-            </td>
-            <td>
-                Max адрес
-            </td>
-            <td>
-                Max сеть
-            </td>
-            <td>
-                Min адрес
-            </td>
-            <td>
-                Max адрес
-            </td>
+            <td i18n="@@network-type">Network type</td>
+            <td i18n="@@networks-in-type">Networks in type</td>
+            <td i18n="@@addresses-in-type">Addresses in type</td>
+            <td i18n="@@min-network">Min network</td>
+            <td i18n="@@min-address">Min address</td>
+            <td i18n="@@max-address">Max address</td>
+            <td i18n="@@max-network">Max network</td>
+            <td i18n="@@min-address">Min address</td>
+            <td i18n="@@max-address">Max address</td>
         </tr>
     @for(v of value; track v.type) {
         <tr>
