--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,2 @@
-<span class="form-header">Боковое меню</span>
-<p>Выберите в боковом меню действие</p>
+<span class="form-header" i18n="@@sidebar">Sidebar</span>
+<p i18n="@@select-action">Select an action from the sidebar</p>
