--- a/src/dark-mode-switch/dark-mode-switch.component.html
+++ b/src/dark-mode-switch/dark-mode-switch.component.html
@@ -1,5 +1,5 @@
 <section>
     <div class="light-dark-side-placeholder">
-      <mat-slide-toggle #toggle class="toggle-light-dark-theme" [checked]="checked" (click)="onToggle(toggle)"> Тёмная тема</mat-slide-toggle>
+      <mat-slide-toggle i18n="@@dark-theme" #toggle class="toggle-light-dark-theme" [checked]="checked" (click)="onToggle(toggle)">Dark theme</mat-slide-toggle>
     </div>
 </section>
