--- a/src/app/calc-addr/calc-addr.component.html
+++ b/src/app/calc-addr/calc-addr.component.html
@@ -10,6 +10,7 @@
                 <mat-error i18n="@@network-type-0-7">Network type 0..7</mat-error>
             }
         </div>
+        <p style="padding: 10pt;"></p>
         <div>
             <mat-form-field class="nwkid">
                 <mat-label i18n="@@network-number">#network</mat-label>
@@ -19,8 +20,9 @@
                 <mat-error i18n="@@network-number-hex">#network: hex number</mat-error>
             }
         </div>
+        <p style="padding: 10pt;"></p>
         <div>
-            <button i18n="@@show" mat-button color="primary" mat-button type="submit">Show</button>  
+            <button i18n="@@show" mat-raised-button color="primary" mat-button type="submit">Show</button>  
         </div>
         <p></p>
         @if(addrSpace) {
