--- a/src/app/qr-code/qr-code.component.html
+++ b/src/app/qr-code/qr-code.component.html
@@ -63,7 +63,12 @@
                 </tr>
                 <tr>
                     <td>
-                        QR code {{urn}}
+                        {{urn}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div #qrcodeimg></div>
                     </td>
                 </tr>
            </table>
