--- a/src/app/all-classes/all-classes.component.html
+++ b/src/app/all-classes/all-classes.component.html
@@ -30,7 +30,7 @@
                 {{ v.nwkMinAddrMin}}
             </td>
             <td>
-                {{ v.nwkMinAddrMin}}
+                {{ v.nwkMinAddrMax}}
             </td>
             <td>
                 {{ v.nwkMax }}
